talos/config/talos/kube-system/httproute-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: kube-system
  labels:
    gateway: redirect-gateway
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway
    name: wildcard-tls-gateway
    namespace: kube-system
    sectionName: http
  hostnames:
  - "*.fredcorp.com"
  rules:
  - filters:
      - requestRedirect:
          scheme: https
          statusCode: 301
        type: RequestRedirect
    matches:
      - path:
          type: PathPrefix
          value: /
